싱글톤 DB매니져와 폼과 FXML 파일 서로 연동

--- a/LOL_UI/src/application/1_Loginform.fxml
+++ b/LOL_UI/src/application/1_Loginform.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Text?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="560.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
+<Pane fx:controller="formJava.Login" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="560.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#82c3ff" height="431.0" layoutX="-17.0" layoutY="-15.0" strokeType="INSIDE" width="582.0">
          <stroke>
@@ -35,6 +35,6 @@
          </font>
       </Text>
       <TextField layoutX="68.0" layoutY="218.0" prefHeight="54.0" prefWidth="314.0" />
-      <Button layoutX="68.0" layoutY="298.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="77.0" text="LOGIN" textAlignment="CENTER" />
+      <Button layoutX="68.0" layoutY="298.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="77.0" text="LOGIN" textAlignment="CENTER" onAction="#doLogin"/>
    </children>
 </Pane>
