--- a/LOL_UI/src/application/1_Loginform.fxml
+++ b/LOL_UI/src/application/1_Loginform.fxml
@@ -23,18 +23,18 @@
          </stroke>
       </Rectangle>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="359.0" layoutX="25.0" layoutY="21.0" stroke="WHITE" strokeType="INSIDE" width="511.0" />
-      <Text layoutX="45.0" layoutY="62.0" stroke="WHITE" strokeType="OUTSIDE" text="UserName" textAlignment="CENTER" underline="true" wrappingWidth="139.12109375">
+      <Text  layoutX="45.0" layoutY="62.0" stroke="WHITE" strokeType="OUTSIDE" text="UserName" textAlignment="CENTER" underline="true" wrappingWidth="139.12109375">
          <font>
             <Font size="20.0" />
          </font>
       </Text>
-      <TextField layoutX="68.0" layoutY="73.0" prefHeight="54.0" prefWidth="314.0" />
+      <TextField fx:id="ID" layoutX="68.0" layoutY="73.0" prefHeight="54.0" prefWidth="314.0" />
       <Text layoutX="68.0" layoutY="207.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" textAlignment="CENTER" underline="true">
          <font>
             <Font size="20.0" />
          </font>
       </Text>
-      <TextField layoutX="68.0" layoutY="218.0" prefHeight="54.0" prefWidth="314.0" />
+      <TextField fx:id="PW" layoutX="68.0" layoutY="218.0" prefHeight="54.0" prefWidth="314.0" />
       <Button layoutX="68.0" layoutY="298.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="77.0" text="LOGIN" textAlignment="CENTER" onAction="#doLogin"/>
    </children>
 </Pane>
