Form 연결 거의 다함

--- a/LOL_UI/src/application/2_Mainform.fxml
+++ b/LOL_UI/src/application/2_Mainform.fxml
@@ -47,6 +47,6 @@
             <Image url="@../../image/i_BOT.png" />
          </image>
       </ImageView>
-      <TextArea fx:id="textarea1" layoutX="137.0" layoutY="244.0" prefHeight="125.0" prefWidth="229.0" />
+      <TextArea fx:id="textarea1" editable="false" layoutX="137.0" layoutY="244.0" prefHeight="125.0" prefWidth="229.0" />
    </children>
 </Pane>
