--- a/LOL_UI/src/application/3_Searchform.fxml
+++ b/LOL_UI/src/application/3_Searchform.fxml
@@ -21,7 +21,7 @@
          </image>
       </ImageView>
       <TextField fx:id="searchid" layoutX="194.0" layoutY="55.0" prefHeight="23.0" prefWidth="118.0" />
-      <Button fx:id="Search2" layoutX="318.0" layoutY="55.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="56.0" text="Search" />
+      <Button fx:id="searchbutton" layoutX="318.0" layoutY="55.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="56.0" text="Search" />
       <Label fx:id="info" layoutX="20.0" layoutY="100.0" prefHeight="26.0" prefWidth="128.0" text="Information" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font size="22.0" />
@@ -37,6 +37,6 @@
             <Image url="@../../image/challenger.png" />
          </image>
       </ImageView>
-      <Button layoutX="20.0" layoutY="350.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="157.0" text="Save to DB" />
+      <Button fx:id="saveToDB" layoutX="20.0" layoutY="350.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="157.0" text="Save to DB" />
    </children>
 </Pane>
