--- a/LOL_UI/src/application/4_Chatform.fxml
+++ b/LOL_UI/src/application/4_Chatform.fxml
@@ -22,7 +22,7 @@
          </image>
       </ImageView>
       <TextField fx:id="send" layoutX="25.0" layoutY="345.0" prefHeight="23.0" prefWidth="234.0" />
-      <Button fx:id="Send" layoutX="289.0" layoutY="345.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="56.0" text="Send" />
+      <Button fx:id="button" layoutX="289.0" layoutY="345.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="56.0" text="Send" />
       <Label fx:id="info" layoutX="261.0" layoutY="53.0" prefHeight="26.0" prefWidth="56.0" text="Chat" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font size="22.0" />
