--- a/LOL_UI/src/application/6_Botform.fxml
+++ b/LOL_UI/src/application/6_Botform.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:controller="formJava.BOTform" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="382.0" prefWidth="380.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="382.0" prefWidth="380.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="formJava.BOTform">
    <children>
       <ImageView fx:id="bg" fitHeight="417.0" fitWidth="738.0" layoutX="-161.0" layoutY="-17.0" opacity="0.5" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -40,17 +40,17 @@
             <Font size="19.0" />
          </font>
       </Label>
-      <TextField layoutX="151.0" layoutY="146.0" promptText="0" />
-      <TextField layoutX="151.0" layoutY="193.0" promptText="0" />
-      <TextField layoutX="151.0" layoutY="234.0" promptText="0" />
-      <Button layoutX="14.0" layoutY="318.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="62.0" text="Run" />
-      <Button layoutX="81.0" layoutY="318.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="62.0" text="Stop" />
-      <Label fx:id="label121" layoutX="220.0" layoutY="332.0" prefHeight="26.0" prefWidth="87.0" text="현재 상태" textAlignment="CENTER" textFill="WHITE">
+      <TextField fx:id="MaxExp" layoutX="151.0" layoutY="146.0" promptText="0" />
+      <TextField fx:id="GameCount" layoutX="151.0" layoutY="193.0" promptText="0" />
+      <TextField fx:id="ThreadCount" layoutX="151.0" layoutY="234.0" promptText="0" />
+      <Button fx:id="Run" layoutX="14.0" layoutY="318.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="62.0" text="Run" />
+      <Button fx:id="Stop" layoutX="81.0" layoutY="318.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="62.0" text="Stop" />
+      <Label fx:id="label121" layoutX="227.0" layoutY="341.0" prefHeight="26.0" prefWidth="87.0" text="현재 상태" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="HYGraphic-Medium" size="18.0" />
          </font>
       </Label>
-      <ImageView fitHeight="26.0" fitWidth="20.0" layoutX="317.0" layoutY="336.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="onoff" fitHeight="26.0" fitWidth="20.0" layoutX="325.0" layoutY="345.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../image/off.png" />
          </image>
